--- a/roles/cart/tasks/main.yaml
+++ b/roles/cart/tasks/main.yaml
@@ -7,6 +7,11 @@
   ansible.builtin.import_roles:
     name: common
     tasks_from: setup-app
+    
+- name: install dependencies
+  ansible.builtin.command: npm install
+  args:
+    chdir: /app
 
 
 
