--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -15,7 +15,7 @@
     chdir: /app
 
 
-- name: Loading Mysql Schema
+- name: Loading Schema
   ansible.builtin.import_roles:
     name: common
     tasks_from: load-mongo-schema
