--- a/roles/payment/tasks/main.yaml
+++ b/roles/payment/tasks/main.yaml
@@ -1,10 +1,10 @@
 - name: Installing Python
-  ansible.bulitin.import_roles:
+  ansible.bulitin.import_role:
     name: common
     tasks_from: python
 
 - name: Setting up applications
-  ansible.bulitin.import_roles:
+  ansible.bulitin.import_role:
     name: common
     tasks_from: setup-app
 
@@ -14,6 +14,6 @@
     chdir: /app
 
 - name: Starting applications
-  ansible.bulitin.import_roles:
+  ansible.bulitin.import_role:
     name: common
     tasks_from: systemd-setup
