--- a/roles/cart/tasks/main.yaml
+++ b/roles/cart/tasks/main.yaml
@@ -1,5 +1,5 @@
-- name: Installing Nodejs
-  ansible.bulitin.import_role:
+- name: Install NodeJS
+  ansible.builtin.import_role:
     name: common
     tasks_from: nodejs
 
