--- a/roles/common/tasks/systemd-setup.yaml
+++ b/roles/common/tasks/systemd-setup.yaml
@@ -1,6 +1,6 @@
 - name: Copying {{component}}.service
   ansible.builtin.copy:
-    src: {{component}}.service
+    src: "{{component}}.service"
     dest: /etc/systemd/system/{{component}}.service
 
 - name: Daemon reload
@@ -10,6 +10,6 @@
 
 - name: Retstart the service
   ansible.bulitin.service:
-    name: {{component}}
+    name: "{{component}}"
     state: restarted
     enabled: yes
