--- a/roles/common/tasks/systemd-setup.yaml
+++ b/roles/common/tasks/systemd-setup.yaml
@@ -10,6 +10,6 @@
 
 - name: Retstart the service
   ansible.bulitin.service:
-    name: "{{component}}"
+    name: {{component}}
     state: restarted
     enabled: yes
