--- a/roles/common/tasks/systemd-setup.yaml
+++ b/roles/common/tasks/systemd-setup.yaml
@@ -8,8 +8,8 @@
     daemon_reload: true
 
 
-- name: Retstart the service
-  ansible.bulitin.service:
-    name: {{component}}
-    state: restarted
+- name: restart {{component}}
+  ansible.builtin.service:
+    name: "{{component}}"
     enabled: yes
+    state: restarted
