--- a/roles/cart/tasks/main.yaml
+++ b/roles/cart/tasks/main.yaml
@@ -13,12 +13,7 @@
   args:
     chdir: /app
 
-
-
 - name: Starting application
-  ansible.builtin.import_roles:
+  ansible.builtin.import_role:
     name: common
     tasks_from: systemd-setup
-
-
- 
