--- a/roles/shipping/tasks/main.yaml
+++ b/roles/shipping/tasks/main.yaml
@@ -1,30 +1,30 @@
-- name: Installing Maven
-  ansible.bulitin.import_role:
+- name: Install Maven
+  ansible.builtin.import_role:
     name: common
-    tasks_from: maven
+    tasks_from: maven-setup
 
-- name: Setting up applications
+- name: SetUp Application
   ansible.builtin.import_role:
     name: common
     tasks_from: setup-app
 
-- name: Installing Dependencies
+- name: install dependencies
   ansible.builtin.command: mvn clean package
-  args: 
-    chdir: /app ## need to use for installing through remote/ansible
+  args:
+    chdir: /app
 
-- name: Starting up applications
-  ansible.builtin.import_role:
-    name: common
-    tasks_from: setup-app
+- name: rename jar file
+  ansible.builtin.command: mv target/shipping-1.0.jar shipping.jar
+  args:
+    chdir: /app
 
-- name: Loading mysql Schema
+- name: Load Schema
   ansible.builtin.import_role:
     name: common
     tasks_from: load-mysql-schema
 
 
-- name: Starting Applications
+- name: start application
   ansible.builtin.import_role:
     name: common
     tasks_from: systemd-setup
