--- a/roles/shipping/tasks/main.yaml
+++ b/roles/shipping/tasks/main.yaml
@@ -1,7 +1,7 @@
 - name: Install Maven
   ansible.builtin.import_role:
     name: common
-    tasks_from: maven-setup
+    tasks_from: maven
 
 - name: SetUp Application
   ansible.builtin.import_role:
