--- a/roles/payment/tasks/main.yaml
+++ b/roles/payment/tasks/main.yaml
@@ -1,5 +1,5 @@
-- name: Installing Python
-  ansible.bulitin.import_role:
+- name: Install Python
+  ansible.builtin.import_role:
     name: common
     tasks_from: python
 
