--- a/roles/payment/tasks/main.yaml
+++ b/roles/payment/tasks/main.yaml
@@ -14,6 +14,6 @@
     chdir: /app
 
 - name: Starting applications
-  ansible.bulitin.import_role:
+  ansible.builtin.import_role:
     name: common
     tasks_from: systemd-setup
