--- a/roles/web/vars/main.yaml
+++ b/roles/web/vars/main.yaml
@@ -2,4 +2,4 @@ CATALOGUE_HOSTS: catalogue.sailasdevops.online
 USER_HOSTS: user.sailasdevops.online
 CART_HOSTS: cart.sailasdevops.online
 SHIPPING_HOSTS: shipping.sailasdevops.online
-PAYMENT_HOSTS: payments.sailasdevops.online
+PAYMENT_HOSTS: payment.sailasdevops.online
